Save a timetable to trams server in online mode